Introduce sql server data base

--- a/src/Codecool.CodecoolShop/appsettings.json
+++ b/src/Codecool.CodecoolShop/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Data Source=DESKTOP-RF974M2\\PABLO_SQL;Initial Catalog=CodecoolShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Provider": "System.Data.SqlClient"
+  }
 }
