--- a/src/Codecool.CodecoolShop/appsettings.json
+++ b/src/Codecool.CodecoolShop/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnectionString": "Data Source=DESKTOP-RF974M2\\PABLO_SQL;Initial Catalog=CodecoolShop;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "Provider": "System.Data.SqlClient"
+    "Provider": "System.Data.SqlClient",
+    "CodecoolCodecoolShopContextConnection": "Server=DESKTOP-RF974M2\\PABLO_SQL;Database=CodecoolShopAuthDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   }
 }
